styled login screen

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Create Your VERY OWN Todolist!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
-</body>
+  </head>
+  <body>
+    <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+    <div class="alert alert-danger"><%= el.msg %></div>
+    <% }) %> <% } %> <% if (locals.messages.info) { %> <% messages.info.forEach(
+    el => { %>
+    <div class="alert alert-danger"><%= el.msg %></div>
+    <% }) %> <% } %>
+
+    <div class="app">
+      <h1>TODO</h1>
+      <h2>The best to-do app ever!</h2>
+
+      <form action="/login" method="POST">
+        <input class="input" type="email" name="email" placeholder="Email" />
+        <input
+          class="input"
+          type="password"
+          name="password"
+          placeholder="Password"
+        />
+        <input class="login btn input" type="submit" value="Login" />
+      </form>
+      <!-- <a href="/login"> Login</a> -->
+      <a class="signup input btn" href="/signup"> Signup</a>
+    </div>
+  </body>
 </html>
