--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,92 @@
-h1{
-    color: red;
+h1 {
+  color: red;
 }
-.completed{
-    text-decoration: line-through;
-    color: gray;
+.completed {
+  text-decoration: line-through;
+  color: gray;
 }
-.not{
-    text-decoration: underline;
+.not {
+  text-decoration: underline;
+}
+
+/* HOME PAGE */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.app {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+
+  width: 55%;
+
+  padding: 3rem;
+  border: 3px solid #aaa;
+  border-radius: 12px;
+}
+
+.app h1 {
+  font-size: 4.8rem;
+  margin-bottom: 3rem;
+}
+
+.app h2 {
+  font-size: 2.8rem;
+}
+
+form {
+  margin: 4rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+
+  column-gap: 2rem;
+}
+
+.input {
+  padding: 1.5rem;
+
+  border-radius: 7px;
+  border: 2px solid #ddd;
+}
+
+.btn {
+  font-size: 1.6rem;
+
+  color: #fff;
+  background: #121bbb;
+  border: 2px solid #121bbb;
+
+  width: 25%;
+
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  cursor: pointer;
+  color: #121bbb;
+  background: #fff;
+}
+
+.login {
+  margin: 2rem;
+  grid-column: span 2;
+}
+
+.signup {
+  text-decoration: none;
+  text-align: center;
+  align-self: flex-end;
 }
