--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
 body {
   display: flex;
   flex-direction: column;
@@ -17,6 +6,9 @@ body {
   min-height: 95vh;
 }
 
+h1 {
+  color: black;
+}
 
 nav {
   display: flex;
