--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
           name="password"
           placeholder="Password"
         />
-        <input class="login btn input" type="submit" value="Login" />
+        <input class="submit-form btn input" type="submit" value="Login" />
       </form>
       <!-- <a href="/login"> Login</a> -->
       <a class="signup input btn" href="/signup"> Signup</a>
