--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+
     <title>Document</title>
-</head>
-<body>
-    <% if (locals.messages.errors) { %>
-        <% messages.errors.forEach( el => { %>
-            <div class="alert alert-danger"><%= el.msg %></div>
-        <% }) %>    
-    <% } %>
-    <form action="/signup" method="POST">
-        <input type="text" name="userName" placeholder="User Name">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <input type="password" name="confirmPassword" placeholder="Confirm Password">
-        <input type="submit">
-    </form>
-</body>
+  </head>
+  <body>
+    <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+    <div class="alert alert-danger"><%= el.msg %></div>
+    <% }) %> <% } %>
+    <div class="app">
+      <h1>TODO</h1>
+      <h2>The best to-do app ever!</h2>
+
+      <form action="/signup" method="POST">
+        <input
+          class="input"
+          type="text"
+          name="userName"
+          placeholder="User Name"
+        />
+        <input class="input" type="email" name="email" placeholder="Email" />
+        <input
+          class="input"
+          type="password"
+          name="password"
+          placeholder="Password"
+        />
+        <input
+          class="input"
+          type="password"
+          name="confirmPassword"
+          placeholder="Confirm Password"
+        />
+        <input class="input btn submit-form" type="submit" value="Signup" />
+      </form>
+    </div>
+  </body>
 </html>
