--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
       <h1>TODO</h1>
       <h2>The best to-do app ever!</h2>
 
-      <form action="/signup" method="POST">
+      <form class="signupLogin" action="/signup" method="POST">
         <input
           class="input"
           type="text"
