--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -28,7 +28,7 @@
     <% todos.forEach( el => { %>
             <li class='todoItem' data-id='<%=el._id%>'>
             
-                <span class=' todoItem <%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                <span class=' todoItem <%= el.completed === true ? 'completed' : 'not'%>'><input type="checkbox"><%= el.todo %></span>
 
                 <button class='del'> <i class="fa-regular fa-trash-can"></i></button>
             </li>
