added dark mode

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,6 +37,8 @@
           placeholder="Confirm Password"
         />
         <input class="input btn submit-form" type="submit" value="Signup" />
+        <input id='darkMode' class="submit-form btn input" type="button" value="Dark Mode" />
+        <script src="js/main.js"></script>
       </form>
     </div>
   </body>
