--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,6 +21,8 @@
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
         <input type="submit">
+        <input id='darkMode' class="submit-form btn input" type="button" value="Dark Mode" />
     </form>
+    <script src="js/main.js"></script>
 </body>
 </html>
