styling, fixed js error

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,9 +37,10 @@
           placeholder="Confirm Password"
         />
         <input class="input btn submit-form" type="submit" value="Signup" />
-        <input id='darkMode' class="submit-form btn input" type="button" value="Dark Mode" />
         <script src="js/main.js"></script>
       </form>
     </div>
+
+    <input id='darkMode' class="submit-form btn input flexSelfEnd" type="button" value="Dark Mode" />
   </body>
 </html>
