--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Best Todo App Ever!</title>
     <link rel="stylesheet" href="css/style.css">
 
      <!-- font awesome-->
@@ -23,31 +23,29 @@
         <a href="/logout" class="logOutButton">Logout</a>
     </nav>
     
-    <main class="mainSection">
+    <main class="app">
         <h2><%= user.userName %> has <span class="itemsLeft"><%= left %> </span>things left to do.</h2>
     
-    <ul>
-    <% todos.forEach( el => { %>
-            <li class='todoItem' data-id='<%=el._id%>'>
-            
-                <span class=' todoItem <%= el.completed === true ? 'completed' : 'not'%>'><input type="checkbox"><%= el.todo %></span>
+        <ul>
+        <% todos.forEach( el => { %>
+                <li class='todoItem' data-id='<%=el._id%>'>
+                
+                    <span class=' todoItem <%= el.completed === true ? 'completed' : 'not'%>'><input type="checkbox"><%= el.todo %></   span>
 
-                <button class='del'> <i class="fa-regular fa-trash-can"></i></button>
-            </li>
-    <% }) %>    
-    </ul>
+                    <button class='del'> <i class="fa-regular fa-trash-can"></i></button>
+                </li>
+        <% }) %>    
+        </ul>
+
+        <section class="addForm">
+            <div class="plusButtonCont"><i class="plusButton fas fa-plus"></i></div>
+            <form action="/todos/createTodo" method='POST'>
+                <input id="addTextBox" class="formTextBox" type="text" placeholder="Enter Todo Item" name='todoItem'>
+                <button class="none" type="submit"><i class="fa-solid fa-circle-plus"></i></button> 
+            </form>
+        </section>
     </main>
-
-    <section class="addForm">
-
-        <div class="plusButtonCont"><i class="plusButton fas fa-plus"></i></div>
-        
-        <form action="/todos/createTodo" method='POST'>
-            <input id="addTextBox" class="formTextBox" type="text" placeholder="Enter Todo Item" name='todoItem'>
-            <button class="none" type="submit"><i class="fa-solid fa-circle-plus"></i></button> 
-        </form>
-        
-    </section>
+    <input id='darkMode' class="submit-form btn input flexSelfEnd" type="button" value="Dark Mode" />
 
     <script src="js/main.js"></script>
 </body>
