--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
       <h1>TODO</h1>
       <h2>The best to-do app ever!</h2>
 
-      <form action="/login" method="POST">
+      <form class="form signupLogin" action="/login" method="POST">
         <input class="input" type="email" name="email" placeholder="Email" />
         <input
           class="input"
@@ -32,7 +32,12 @@
       <!-- <a href="/login"> Login</a> -->
       <a class="signup input btn" href="/signup"> Signup</a>
     </div>
-    <input id='darkMode' class="submit-form btn input" type="button" value="Dark Mode" />
+    <input
+      id="darkMode"
+      class="submit-form btn input"
+      type="button"
+      value="Dark Mode"
+    />
     <script src="js/main.js"></script>
   </body>
 </html>
