center aligned headers and signup button in mobile sizes, added alt button class to signup button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         <input class="submit-form btn input" type="submit" value="Login" />
       </form>
       <!-- <a href="/login"> Login</a> -->
-      <a class="signup input btn" href="/signup"> Signup</a>
+      <a class="signup input btn-alt" href="/signup"> Signup</a>
     </div>
     <input
       id="darkMode"
