--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,21 @@ form.signupLogin {
   background: #fff;
 }
 
+.btn-alt {
+  font-size: 1.6rem;
+  color: #121bbb;
+  background: #fff;
+  border: 2px solid #121bbb;
+  width: 12rem;
+  transition: all 0.2s;
+}
+
+.btn-alt:hover {
+  cursor: pointer;
+  color: #fff;
+  background: #121bbb;
+}
+
 .submit-form {
   margin: 2rem;
   grid-column: span 2;
@@ -234,6 +249,12 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .app h1, .app h2 {
+    text-align: center;
+  }
+  .signup {
+    align-self: center;
   }
 }
 
